--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,15 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "paper"
-version = "0.0.1"
-description = "Paper - Pytorch"
+name = "simple-mamba"
+version = "0.0.2"
+description = "Simple Mambda - Pytorch"
 license = "MIT"
 authors = ["Kye Gomez <kye@apac.ai>"]
-homepage = "https://github.com/kyegomez/paper"
-documentation = "https://github.com/kyegomez/paper"  # Add this if you have documentation.
+homepage = "https://github.com/kyegomez/SimpleMamba "
+documentation = "https://github.com/kyegomez/SimpleMamba    "  # Add this if you have documentation.
 readme = "README.md"  # Assuming you have a README.md
-repository = "https://github.com/kyegomez/paper"
+repository = "https://github.com/kyegomez/SimpleMamba   "
 keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -24,11 +24,9 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 swarms = "*"
+torch = "*"
+torchvision = "*"
 zetascale = "*"
-
-[tool.poetry.dev-dependencies]
-# Add development dependencies here
-
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.1.6"
